--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,21 +9,11 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <canvas id="game" widht="500" height="500"></canvas>
     <ul id="messages"></ul>
     <form id="message_form" action="#">
     	<input id="input_msg" /><button>send</button>
-    	<script type="text/javascript">
-    		var socket = io();
-    		$('#message_form').submit(function(){
-    			socket.emit('message',$('#input_msg').val());
-    			$('#input_msg').val('');
-    			return false;
-    		});
-    		socket.on('message',function(msg){
-    			$('#messages').append('<ul>'+msg+'</ul>');
-    		});
-
-    	</script>
+    	<script src="javascripts/client.js"></script>
     </form>
   </body>
 </html>
